--- a/src/index.html
+++ b/src/index.html
@@ -83,6 +83,10 @@
 <script>
     var list = [];
 
+    //    list.push({
+    //        content: '../thumbnails/iSlider-logo.png'
+    //    });
+
     list.push({
         content: '<div style="font-size:2em;color:white;text-align: center">HTML<a href="http://baidu.com">Link</a></div>'
     });
@@ -113,7 +117,7 @@
 
     for (var i = 0; i < 3; i++)
         list.push({
-            content: '<div class="ro">' + i + '</div>'
+            content: '<div data-active="true" class="ro">' + i + '</div>'
         });
 
     list.push({
@@ -138,12 +142,12 @@
                 dom: document.getElementById("iSlider-wrapper"),
 //                isVertical: 1,
 //                isLooping: 1,
-                isOverspread: 1,
+//                isOverspread: 1,
 //                animateType: 'rotate',
 //                delay: 3000,
 //                animateTime: 10000,
 //                fillSeam: 1,
-//                fixPage: 0,
+                fixPage: '[data-active="true"]',
                 isDebug: 1,
                 isAutoplay: true,
                 duration: 5000,
