--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
         }
 
         .islider-outer > li {
-            overflow: auto;
-            background: rgba(0, 0, 0, .5);
+            background-color: #999999;
+            -webkit-overflow-scrolling: touch;
         }
 
         .islider-btn-outer {
@@ -141,15 +141,15 @@
 //                data: list,
                 dom: document.getElementById("iSlider-wrapper"),
 //                isVertical: 1,
-//                isLooping: 1,
+                isLooping: 1,
 //                isOverspread: 1,
-//                animateType: 'rotate',
+                animateType: 'rotate',
 //                delay: 3000,
-//                animateTime: 10000,
+                animateTime: 1000,
 //                fillSeam: 1,
-                fixPage: '[data-active="true"]',
+                fixPage: false,
                 isDebug: 1,
-                isAutoplay: true,
+//                isAutoplay: true,
                 duration: 5000,
 //                plugins: [
 //                    ['dot', {locate: 'relative'}],
