--- a/demo/index_chinese.html
+++ b/demo/index_chinese.html
@@ -202,7 +202,8 @@
                 <button type="button" data-target="./2.X_with-plugins-dot-button.html">提供各种按钮插件支持</button>
                 <button type="button" data-target="./2.X_with-plugins-others.html">自定义的插件</button>
                 <button type="button" data-target="./music_card.html">音乐卡片</button>
-                <button type="button" data-target="./swop.html">文字背景组合</button>
+                <button type="button" data-target="./add_dynamic_data.html">动态追加数据</button>
+                <button type="button" data-target="./swop.html">双实例联动</button>
             </div>
             <h3 class="animate-title">demo代码</h3>
             <pre id="code">
