--- a/demo/index_chinese.html
+++ b/demo/index_chinese.html
@@ -861,6 +861,18 @@ S.on('slideChanged', callBack);</code></pre>
                     <li>参数：
                         <ul>
                             <li><code>{Array}</code> 数据列表</li>
+                            <li><code>{Number}</code> 初始场景索引</li>
+                        </ul>
+                    </li>
+                </ul>
+
+                <h4 id="pushdata">pushData</h4>
+
+                <ul>
+                    <li>追加数据到已有的数据序列末尾</li>
+                    <li>参数：
+                        <ul>
+                            <li><code>{Array|Object}</code> 一个成员或者追加的序列（数组）</li>
                         </ul>
                     </li>
                 </ul>
