--- a/demo/add_dynamic_data.html
+++ b/demo/add_dynamic_data.html
@@ -34,7 +34,7 @@
 <button style="position:absolute;right:20px;bottom:20px;font-size:1em;" onclick="toggleLooping()">Toggle Looping
 </button>
 <script src="public/js/iSlider.js"></script>
-<script>
+<script id="show-code">
 
     function toggleLooping() {
         islider.isLooping = !islider.isLooping;
