--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,6 @@
                 src="https://cloud.githubusercontent.com/assets/8253888/10995507/592ce796-84b8-11e5-842b-938c55a4cb3a.jpg"
                 alt="qq 20151106184244" style="max-width:100%;"></a></p>
 </div>
-<script src="http://172.24.82.58:8080/target/target-script-min.js#anonymous"></script>
 <script src="js/iSlider.js"></script>
 <script src="js/ext/animate.js"></script>
 <script src="js/plugins/dot.js"></script>
@@ -146,15 +145,16 @@
 //                data: list,
                 dom: document.getElementById("iSlider-wrapper"),
 //                isVertical: 1,
-                isLooping: 1,
+//                isLooping: 1,
 //                isOverspread: 1,
 //                animateType: 'rotate',
 //                delay: 3000,
-                animateTime: 5000,
+//                animateTime: 5000,
+                dampingForce: 1,
                 fillSeam: 1,
                 fixPage: ['[x="ooxx"]', 'div'],
-                isDebug: 1,
-                isAutoplay: true,
+//                isDebug: 1,
+//                isAutoplay: true,
                 duration: 5000,
 //                plugins: [
 //                    ['dot', {locate: 'relative'}],
