--- a/src/index.html
+++ b/src/index.html
@@ -153,7 +153,7 @@
                 dampingForce: 1,
                 fillSeam: 1,
                 fixPage: ['[x="ooxx"]', 'div'],
-//                isDebug: 1,
+                isDebug: 1,
 //                isAutoplay: true,
                 duration: 5000,
 //                plugins: [
