修复rotate等动画下跳页错误

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             }
         }
     </style>
-    <script src="http://172.21.250.79:8080/target/target-script-min.js#anonymous"></script>
+    <!-- <script src="http://172.21.250.79:8080/target/target-script-min.js#anonymous"></script> -->
 </head>
 
 <body>
