fix perspective compatibility

--- a/demo/debug.html
+++ b/demo/debug.html
@@ -40,6 +40,7 @@
             -webkit-box-pack: center;
             -webkit-box-align: center;
             list-style: none;
+            /*border: 1px solid #ffffff;*/
         }
 
         #iSlider-wrapper li img {
