修复slideTo时丢class的bug，webpack打包中移除插件

--- a/demo/2.X_default.html
+++ b/demo/2.X_default.html
@@ -100,7 +100,7 @@
         }
     ];
 
-    new iSlider(document.getElementById('iSlider-wrapper'), list);
+    var S = new iSlider(document.getElementById('iSlider-wrapper'), list);
 </script>
 </body>
 </html>
